# todo-wallpaper-win

./: README.md  init.py  paths.py  pyproject.toml  render.py  setup.py  todo  todo-wallpaper-init.service  todo.py  todos.json
.github/workflows/: publish.yml
