[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-wallpaper"
version = "0.1.6"
description = "A CLI todo list that renders as your desktop wallpaper"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Yash Pandey", email = "pandeyash06@gmail.com" }
]

dependencies = [
  "Pillow>=10.0.0",
  "platformdirs>=3.11",
]

keywords = ["todo", "wallpaper", "cli", "desktop", "gnome"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
]

[project.urls]
Repository = "https://github.com/Yash-Thio/todo-wallpaper"
Issues = "https://github.com/Yash-Thio/todo-wallpaper/issues"

[project.scripts]
todo = "todo:main"

[tool.setuptools]
py-modules = ["todo", "render", "init", "paths"]